--- a/apps/client/locales/ru/admin.json
+++ b/apps/client/locales/ru/admin.json
@@ -64,6 +64,29 @@
     "editUser": "Редактировать пользователя",
     "editing": "Вы редактируете <span>{user}</span>",
     "editUnit": "Редоктировать юнит",
+    "users": "Пользователи",
+    "pending": "Ожидание",
+    "banned": "Заблокирован",
+    "officers": "Офицеры",
+    "emsFdDeputies": "EMS/FD сотрудники",
+    "citizens": "Граждане",
+    "arrested": "Арестован",
+    "dead": "Мёртв",
+    "images": "Изображения",
+    "created": "Создан",
+    "registered": "Зарегистрирован",
+    "active": "Активен",
+    "vehicles": "Транспорт",
+    "leo": "LEO",
+    "emsFd": "EMS/FD",
+    "onDuty": "На смене",
+    "suspended": "Приостановлен",
+    "manageCourthouseDescription": " Здесь вы можете управлять запросами на удаление, смену имени и ожидающими ордерами",
+    "manageCustomFieldsDescription": "Здесь вы можете управлять пользовательскими полями. Эти поля могут использоваться офицерами при поиске граждан",
+    "manageCustomRolesDescription": "Здесь вы можете управлять пользовательскими ролями. Эти роли можно назначать пользователям вместо предоставления отдельных разрешений",
+    "importCitizensDescription": "Здесь вы можете массово импортировать граждан, которые не могут быть подключены к зарегистрированному пользователю",
+    "importVehiclesDescription": "Здесь можно массово импотировать транспорт, зарегистрированный на гражданина. В таблице ниже вы можете увидеть весь зарегистрированный транспорт",
+    "importWeaponsDescription": "Здесь можно массово импотировать оружие, зарегистрированное на гражданина. В таблице ниже вы можете увидеть все зарегистрированное оружие",
     "alert_deleteCustomRole": "Вы уверены, что хотите удалить <span>{role}</span>? Это действие необратимо",
     "alert_deleteUnit": "Вы уверены, что хотите удалить <span>{unit}</span>? Это действие необратимо!",
     "alert_deleteCustomField": "Вы уверены, что хотите удалить это пользовательско поле? Это действие необратимо. Все записи, созданные с этим полем будут удалены.",
