--- a/apps/client/locales/ru/common.json
+++ b/apps/client/locales/ru/common.json
@@ -54,7 +54,13 @@
     "user": "Пользователь",
     "savedSettingsSuccess": "Настройки успешно сохранены",
     "select": "Выбрать...",
-    "item": "Элемент"
+    "item": "Элемент",
+    "address": "Адрес",
+    "location": "Местоположение",
+    "startTyping": "Печатает...",
+    "searching": "Поиск...",
+    "information": "Информация",
+    "showingXResults": "Результат(ы): <span>{amount}</span>"
   },
   "Nav": {
     "citizen": "Гражданин",
@@ -85,11 +91,12 @@
     "callHistory": "История вызовов",
     "citizenLogs": "Журнал граждан",
     "courthouse": "Суд",
-    "dlExams": "Экзамен на водительскую лицензию",
+    "licenseExams": "Экзамены на лицензии",
     "dmv": "Департамент транспортных средств",
     "penalCodes": "Статьи",
-    "weaponExams": "Экзамены на владение оружием",
-    "myDeputyLogs": "Логи моих помощников"
+    "myDeputyLogs": "Логи моих помощников",
+    "whatsNew": "Что нового",
+    "bureauOfFirearms": "Бюро огнестрельного оружия"
   },
   "Errors": {
     "unknown": "Произошла непредвиденная ошибка",
@@ -158,6 +165,8 @@
     "alreadyHasPrimaryUnit": "У вызова уже есть основной юнит",
     "noActiveOfficer": "Нет ни одного активного офицера в данный момент, сначала выйдите на смену",
     "socialSecurityNumberTaken": "Этот номер социального страхования уже используется",
-    "citizenNotAllowedToEditLicenses": "Граждане не могут редактировать свои лицензии. Обратитесь к офицеру полиции, чтобы изменить лицензии"
+    "citizenNotAllowedToEditLicenses": "Граждане не могут редактировать свои лицензии. Обратитесь к офицеру полиции, чтобы изменить лицензии",
+    "vehicleIsImpounded": "Этот транспорт эвакуирован, нельзя редактировать или удалить запись, пока транспорт находится на штрафстоянке",
+    "featureNotEnabled": "Эта функция не включена. ({feature})"
   }
 }
