--- a/apps/client/locales/ru/leo.json
+++ b/apps/client/locales/ru/leo.json
@@ -228,8 +228,18 @@
     "warningApplicable": "Предупреждение применимо",
     "impounded": "Эвакуировано",
     "impoundVehicle": "Эвакуировать транспорт",
+    "impoundedBy": "Эвакуирован",
+    "impoundedAt": "Эвакуирован в",
     "endsOn": "Оканчивается в",
+    "assignedToCall#": "Вы были назначены на вызов #{caseNumber}.",
+    "assignedToCall#WithType": "Вы были назначены на вызов #{caseNumber}. Тип вызова: {callType}",
     "warrantCreatedButApprovalRequired": "Ордер успешно создан, однако, CAD требует подтверждения ордера для активации. Ордер будет доступен после подтверждения",
+    "suspendDriversLicense": "Приостановленная водительская лицензия",
+    "suspendPilotLicense": "Приостановленная летная лицензия",
+    "suspendWaterLicense": "Приостановленная лицензия на водный транспорт",
+    "suspendFirearmsLicense": "Приостановленная лицензия на оружие",
+    "endDate": "Дата окончания",
+    "patrolVehicle": "Патрульный автомобиль",
     "alert_deleteNote": "Вы уверены, что хотите удалить эту запись? Это действие необратимо",
     "alert_deleteQualification": "Вы уверены, что хотите удалить квалификацию? Это действие необратимо",
     "vehicleImpoundLocation": "Указанный транспорт ({plate}) будет эвакуирован в {impoundLocation}. Вы сможете просмотреть этот автомобиль на странице штрафстоянки.",
