--- a/apps/client/locales/ru/citizen.json
+++ b/apps/client/locales/ru/citizen.json
@@ -44,6 +44,17 @@
     "licenses": "Лицензии",
     "licenseSuspendedInfo": "Лицензия приостановлена. Обратитесь к офицеру полиции для отмены приостановления",
     "licenseNumber": "Номер лицензии",
+    "unmarkAsStolen": "Снять отметку об угоне",
+    "markCitizenDeceased": "Отметить, как умершего",
+    "citizenDead": "ВНИМАНИЕ: Этот гражданин умер {date}",
+    "basicInformation": "Основная информация",
+    "optionalInformation": "Дополнительная информация",
+    "licenseInformation": "Информация о лицензиях",
+    "officer": "Офицер",
+    "createWithOfficer": "Создать с офицером",
+    "previousRecords": "Предыдущие записи",
+    "createPreviousRecordsStepDescription": "Здесь вы можете по желанию добавить предыдущие записи, которые были у этого гражданина. Это полезно, когда гражданин уже был арестован ранее",
+    "alert_markCitizenDeceased": "Вы уверены, что хотите удалить <span>{citizen}</span>? Только EMS/FD могут отметить гражданина, как живого",
     "alert_deleteCitizen": "Вы уверены, что хотите удалить <span>{citizen}</span>? Это действие необратимо."
   },
   "Vehicles": {
@@ -88,6 +99,7 @@
     "deleteWeapon": "Удалить оружие",
     "registeredWeapons": "Зарегистрированное оружие",
     "successWeaponRegistered": "Оружие зарегистрировано",
+    "bofStatus": "BOF статус",
     "alert_deleteWeapon": "Вы уверены, что хотите удалить это оружие? Это действие необратимо."
   },
   "MedicalRecords": {
