--- a/apps/client/locales/ru/values.json
+++ b/apps/client/locales/ru/values.json
@@ -25,6 +25,7 @@
     "isConfidential": "Конфиденциально",
     "priority": "Приоритет",
     "isDisabled": "Отключено",
+    "county": "Округ",
     "alert_deletePenalCodeGroup": "Вы уверены, что хотите удалить <span>{group}</span>? Это действие необратимо.",
     "alert_deleteValue": "Вы уверены, что хотите удалить <span>{value}</span>? Это действие необратимо.",
     "alert_deleteSelectedValues": "Вы уверены, что хотите удалить {length} элемент (ов)? Это действие необратимо."
@@ -136,5 +137,17 @@
     "ADD": "Добавить тип вызова",
     "DELETE": "Удалить тип вызова",
     "EDIT": "Редактировать тип вызова"
+  },
+  "ADDRESS": {
+    "MANAGE": "Адреса",
+    "ADD": "Добавить адрес",
+    "DELETE": "Удалить адрес",
+    "EDIT": "Редактировать адрес"
+  },
+  "EMERGENCY_VEHICLE": {
+    "MANAGE": "Транспорт экстренных служб",
+    "ADD": "Добавить транспорт",
+    "DELETE": "Удалить транспорт",
+    "EDIT": "Редактировать транспорт"
   }
 }
