--- a/apps/client/locales/en/values.json
+++ b/apps/client/locales/en/values.json
@@ -26,6 +26,8 @@
     "priority": "Priority",
     "isDisabled": "Disabled",
     "county": "County",
+    "deletedSelectedValues": "Deleted {deleted} items. Failed to delete {failed} items.",
+    "failedDeleteValue": "Failed to delete <span>{value}</span>.",
     "alert_deletePenalCodeGroup": "Are you sure you want to delete <span>{group}</span>? This action cannot be undone.",
     "alert_deleteValue": "Are you sure you want to delete <span>{value}</span>? This action cannot be undone!",
     "alert_deleteSelectedValues": "Are you sure you want to delete {length} items? This action cannot be undone"
