--- a/apps/client/locales/en-gb/common.json
+++ b/apps/client/locales/en-gb/common.json
@@ -97,7 +97,8 @@
     "weaponExams": "Weapon Exams",
     "myDeputyLogs": "My member logs",
     "whatsNew": "What's New",
-    "licenseExams": "License Exams"
+    "licenseExams": "License Exams",
+    "bureauOfFirearms": "Firearms Licensing Unit"
   },
   "Errors": {
     "unknown": "An unexpected error occurred",
