--- a/apps/client/locales/en-gb/account.json
+++ b/apps/client/locales/en-gb/account.json
@@ -50,7 +50,9 @@
     "speech": "Speech",
     "speechVoice": "Speech Voice",
     "otherSounds": "Other Sounds",
-    "unavailableSounds": "Unavailable Sounds"
+    "unavailableSounds": "Unavailable Sounds",
+    "unavailableSoundsMessage": "These sounds are unavailable. They must be added by an admin.",
+    "userApiTokenDescription": "This token can be used to communicate with SnailyCAD's API."
   },
   "Notifications": {
     "CITIZEN_DELETED": "<span>{citizen}</span> was deleted. Reason: {reason}"
