--- a/apps/client/locales/en-gb/leo.json
+++ b/apps/client/locales/en-gb/leo.json
@@ -231,6 +231,7 @@
     "deleteWeaponExam": "Delete Weapon's license exam",
     "activeWarrants": "Active Warrants",
     "noActiveWarrants": "There are no active warrants.",
+    "callUpdated": "Your call #{caseNumber} has been updated",
     "alert_deleteNote": "Are you sure you want to delete this note? This action cannot be undone.",
     "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
     "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
@@ -290,5 +291,9 @@
     "categories": "Categories",
     "deleteExam": "Delete license exam",
     "alert_deleteExam": "Are you sure you want to delete this license exam? This action cannot be undone."
+  },
+  "Bof": {
+    "bureauOfFirearms": "Firearms Licensing Unit",
+    "noWeaponsPendingBof": "There are no firearms license requests pending approval."
   }
 }
