:hammer: chore: update business translations for British English

--- a/apps/client/locales/en-gb/common.json
+++ b/apps/client/locales/en-gb/common.json
@@ -67,7 +67,7 @@
     "citizens": "Civilians",
     "bleeter": "Bleeter",
     "taxi": "Taxi",
-    "business": "Business",
+    "business": "Organisation",
     "truckLogs": "Truck Logs",
     "admin": "Admin",
     "dispatch": "Control",
