--- a/apps/client/locales/en-gb/business.json
+++ b/apps/client/locales/en-gb/business.json
@@ -1,15 +1,15 @@
 {
   "Business": {
-    "businesses": "Businesses",
+    "businesses": "Organisations",
     "owned": "Owned",
     "joined": "Joined",
-    "noOwned": "You do not own any businesses",
+    "noOwned": "You do not own any organisations",
     "role": "Role",
     "citizen": "Civilian",
-    "notEmployee": "You are not an employee at an other business",
-    "business": "Business",
-    "createBusiness": "Create Business",
-    "joinBusiness": "Join Business",
+    "notEmployee": "You are not a member of any organisations",
+    "business": "Organisations",
+    "createBusiness": "Create Organisation",
+    "joinBusiness": "Join Organisation",
     "owner": "Owner",
     "name": "Name",
     "address": "Address",
@@ -17,29 +17,29 @@
     "deletePost": "Delete Post",
     "createPost": "Create Post",
     "editPost": "Edit Post",
-    "employees": "Employees",
-    "employeeOfTheMonth": "Employee of the month",
+    "employees": "Members",
+    "employeeOfTheMonth": "Member of the month",
     "publishedBy": "Published By",
-    "fire": "Fire",
-    "manageEmployee": "Manage Employee",
-    "canManageEmployees": "Can manage employees",
+    "fire": "Remove",
+    "manageEmployee": "Manage Member",
+    "canManageEmployees": "Can manage members",
     "canCreatePosts": "Can create posts",
-    "fireEmployee": "Fire employee",
-    "deleteBusiness": "Delete Business",
+    "fireEmployee": "Remove member",
+    "deleteBusiness": "Delete Organisation",
     "whitelistStatus": "Whitelist Status",
-    "allEmployees": "All Employees",
-    "pendingEmployees": "Pending Employees",
-    "businessVehicles": "Business Vehicles",
-    "noPendingEmployees": "There are no employees pending access.",
-    "noVehicles": "This business has no vehicles registered.",
-    "businessIsWhitelisted": "This business is whitelisted. You will be able to view it once you're accepted.",
-    "businessWhitelistedCAD": "This business is still awaiting approval of an administrator.",
+    "allEmployees": "All Members",
+    "pendingEmployees": "Pending Members",
+    "businessVehicles": "Organisation Vehicles",
+    "noPendingEmployees": "There are no members pending access.",
+    "noVehicles": "This organisation has no vehicles registered.",
+    "businessIsWhitelisted": "This organisation is whitelisted. You will be able to view it once you're accepted.",
+    "businessWhitelistedCAD": "This organisation is still awaiting approval of an administrator.",
     "postTitle": "Post Title",
     "postBody": "Post Body",
-    "nameDescription": "The name of your business.",
-    "addressDescription": "The address of your business.",
-    "whitelistDescription": "Citizens that want to join your business must be reviewed. They can be accepted or denied.",
-    "alert_fireEmployee": "Are you sure you want to fire <span>{employee}</span>? This action cannot be undone.",
+    "nameDescription": "The name of your organisation.",
+    "addressDescription": "The address of your organisation.",
+    "whitelistDescription": "Civilians that want to join your organisation must be reviewed. They can be accepted or denied.",
+    "alert_fireEmployee": "Are you sure you want to remove <span>{employee}</span>? This action cannot be undone.",
     "alert_deletePost": "Are you sure you want to delete this post? This action cannot be undone.",
     "alert_deleteBusiness": "Are you sure you want to delete \"<span>{business}</span>\"? This action cannot be undone."
   }
