--- a/apps/client/locales/pt-BR/leo.json
+++ b/apps/client/locales/pt-BR/leo.json
@@ -233,12 +233,12 @@
     "endsOn": "Termina em",
     "assignedToCall#": "Você foi designado para um chamado #{caseNumber}.",
     "assignedToCall#WithType": "Você foi designado para o chamado #{caseNumber}. Tipo de chamado: {callType}",
-    "warrantCreatedButApprovalRequired": "O mandado foi criado com sucesso, porém este CAD requer aprovação para que os mandados estejam ativos. O warrant estará disponível assim que for aprovado.",
+    "warrantCreatedButApprovalRequired": "O mandado foi criado com sucesso, porém este CAD requer aprovação para que os mandados estejam ativos. O mandado estará disponível assim que for aprovado.",
     "suspendDriversLicense": "Carteira de Motorista Suspensa",
     "suspendPilotLicense": "Carteira de Piloto Suspensa",
     "suspendWaterLicense": "Carteira de Barco Suspensa",
     "suspendFirearmsLicense": "Licença de Arma de Fogo Suspensa",
-    "endDate": "Data final",
+    "endDate": "Data Final",
     "patrolVehicle": "Veículo de Patrulha",
     "callUpdated": "Sua chamada #{caseNumber} foi atualizada",
     "alert_deleteNote": "Tem certeza de que deseja excluir esta nota? Esta ação não pode ser desfeita.",
