--- a/apps/client/locales/fr-FR/courthouse.json
+++ b/apps/client/locales/fr-FR/courthouse.json
@@ -32,8 +32,10 @@
     "addCourthousePost": "Ajouter une publication",
     "noCourthousePosts": "Il n'y a pas de publications pour le moment.",
     "createdBy": "Créé par",
+    "cancelRequest": "Annuler la demande",
     "alert_deleteCourthousePost": "Êtes-vous sûr de vouloir supprimer cette publication ? Cette action ne peut être annulée.",
     "alert_deleteCourtEntry": "Êtes-vous sûr de vouloir supprimer cette entrée ? Cette action ne peut être annulée.",
+    "alert_cancelRequest": "Êtes-vous sûr de vouloir annuler cette demande ? Cette action ne peut être annulée.",
     "alert_deleteCourtDate": "Êtes-vous sûr de vouloir supprimer cette date ? Cette action ne peut être annulée."
   }
 }
