--- a/apps/client/locales/fr-FR/values.json
+++ b/apps/client/locales/fr-FR/values.json
@@ -10,8 +10,6 @@
     "file": "fichier",
     "importValues": "Importer via fichier",
     "exportValues": "Exporter Valeurs",
-    "addPenalCodeGroup": "Ajouter Groupe",
-    "deleteGroup": "Supprimer Groupe",
     "ungrouped": "Non groupé",
     "licenseType": "Type de licence",
     "whitelisted": "Liste Blanche",
@@ -26,9 +24,19 @@
     "priority": "Priorité",
     "isDisabled": "Désactivé",
     "county": "Comté",
-    "alert_deletePenalCodeGroup": "Êtes-vous sûr de vouloir supprimer <span>{group}</span> ? Cette action ne peut être annulée.",
+    "deletedSelectedValues": "{deleted} éléments supprimés. {failed} échoués.",
+    "failedDeleteValues": "Échec de la suppression de <span>{value}</span>",
     "alert_deleteValue": "Êtes-vous sûr de vouloir supprimer <span>{value}</span> ? Cette action ne peut être annulée.",
     "alert_deleteSelectedValues": "Êtes-vous sûr de vouloir supprimer {length} élément(s) ? Cette action ne peut être annulée."
+  },
+  "PENAL_CODE_GROUP": {
+    "MANAGE": "Gérer Groupes de Code Pénal",
+    "ADD": "Ajouter Groupe de Code Pénal",
+    "DELETE": "Supprimer Groupe de Code Pénal",
+    "EDIT": "Modifier Groupe de Code Pénal",
+    "ungrouped": "Non groupé",
+    "alert_deletePenalCodeGroup":"Êtes-vous sûr de vouloir supprimer <span>{group}</span> ? Cette action ne peut être annulée.",
+    "deleteGroup":"Supprimer Groupe"
   },
   "GENDER": {
     "MANAGE": "Gérer Genres",
