--- a/apps/client/locales/pt-BR/common.json
+++ b/apps/client/locales/pt-BR/common.json
@@ -95,7 +95,8 @@
     "dmv": "Departamento de Veículos Automotores",
     "penalCodes": "Códigos Penais",
     "myDeputyLogs": "Meus logs Médicos/Bombeiros",
-    "whatsNew": "O que há de novo"
+    "whatsNew": "O que há de novo",
+    "bureauOfFirearms": "Departamento de Armas de Fogo"
   },
   "Errors": {
     "unknown": "Ocorreu um erro inesperado",
