--- a/apps/client/locales/pt-BR/admin.json
+++ b/apps/client/locales/pt-BR/admin.json
@@ -64,6 +64,29 @@
     "editUser": "Editar Usuário",
     "editing": "Você está editando <span>{user}</span>",
     "editUnit": "Editar Unidade",
+    "users": "Usuários",
+    "pending": "Pendente",
+    "banned": "Banido",
+    "officers": "Oficiais",
+    "emsFdDeputies": "EMS/FD Membros",
+    "citizens": "Cidadãos",
+    "arrested": "Preso",
+    "dead": "Morto",
+    "images": "Imagens",
+    "created": "Criado",
+    "registered": "Registrado",
+    "active": "Ativo",
+    "vehicles": "Vehicles",
+    "leo": "LEO",
+    "emsFd": "EMS/FD",
+    "onDuty": "Em Serviço",
+    "suspended": "Suspenso",
+    "manageCourthouseDescription": "Aqui você pode gerenciar pedidos de expurgo, pedidos de mudança de nome e mandados pendentes.",
+    "manageCustomFieldsDescription": "Aqui você pode gerenciar campos personalizados. Esses campos podem ser adicionados por qualquer funcionário a cidadãos na pesquisa de nomes.",
+    "manageCustomRolesDescription": "Aqui você pode gerenciar funções personalizadas. Essas funções podem ser atribuídas aos usuários em vez de conceder permissões uma a uma.",
+    "importCitizensDescription": "Aqui você pode importar cidadãos em massa que podem não estar conectados a um usuário registrado.",
+    "importVehiclesDescription": "Aqui pode importar em massa viaturas registadas em nome de cidadão. Na tabela abaixo pode ver todas as viaturas registadas.",
+    "importWeaponsDescription": "Aqui você pode importar em massa armas registradas para um cidadão. Na tabela abaixo você pode ver todas as armas registradas.",
     "alert_deleteCustomRole": "Tem certeza de que deseja excluir <span>{role}</span>? Esta ação não pode ser desfeita",
     "alert_deleteUnit": "Tem certeza de que deseja excluir <span>{unit}</span>? Esta ação não pode ser desfeita!",
     "alert_deleteCustomField": "Tem certeza de que deseja excluir este campo personalizado? Esta ação não pode ser desfeita. Todos os valores criados com este campo também serão excluídos.",
