--- a/apps/client/locales/pt-BR/common.json
+++ b/apps/client/locales/pt-BR/common.json
@@ -56,7 +56,11 @@
     "select": "Selecionar...",
     "item": "item",
     "address": "Endereço",
-    "location": "Localização"
+    "location": "Localização",
+    "startTyping": "Começe a digitar...",
+    "searching": "Searching...",
+    "information": "Informação",
+    "showingXResults": "Mostrando <span>{amount}</span> resultado(s)"
   },
   "Nav": {
     "citizen": "Cidadão",
@@ -91,7 +95,8 @@
     "dmv": "Departamento de Veículos Automotores",
     "penalCodes": "Códigos Penais",
     "myDeputyLogs": "Meus logs Médicos/Bombeiros",
-    "whatsNew": "O que há de novo"
+    "whatsNew": "O que há de novo",
+    "bureauOfFirearms": "Departamento de Armas de Fogo"
   },
   "Errors": {
     "unknown": "Ocorreu um erro inesperado",
@@ -160,6 +165,8 @@
     "alreadyHasPrimaryUnit": "Esta chamada já tem uma unidade primária.",
     "noActiveOfficer": "Você não tem nenhum oficial ativo neste momento, por favor, volte ao serviço primeiro.",
     "socialSecurityNumberTaken": "Este número de seguro social já está em uso.",
-    "citizenNotAllowedToEditLicenses": "Você, como cidadão, não tem permissão para editar suas próprias licenças. Entre em contato com um oficial para gerenciar suas licenças."
+    "citizenNotAllowedToEditLicenses": "Você, como cidadão, não tem permissão para editar suas próprias licenças. Entre em contato com um oficial para gerenciar suas licenças.",
+    "vehicleIsImpounded": "Este veículo está apreendido, você não pode editar ou excluir até que seja liberado do lote apreendido.",
+    "featureNotEnabled": "Este recurso não está habilitado. ({feature})"
   }
 }
