--- a/apps/client/locales/cs-CZ/admin.json
+++ b/apps/client/locales/cs-CZ/admin.json
@@ -12,6 +12,7 @@
     "MANAGE_CUSTOM_FIELDS": "Správa Vlastních Polí",
     "MANAGE_CUSTOM_ROLES": "Správa Vlastních Rolí",
     "MANAGE_COURTHOUSE": "Správa Soudu",
+    "MANAGE_PENDING_WARRANTS": "Správa zatykačů",
     "import": "Importovat",
     "IMPORT_CITIZENS": "Importovat Civilisty",
     "IMPORT_VEHICLES": "Importovat Vozidla",
@@ -36,10 +37,10 @@
     "status": "Status",
     "allBusinesses": "Všechny podniky",
     "whitelisted": "Whitelisted",
-    "declineOfficer": "Odmítnout hlídku",
+    "declineUnit": "Odmítnout",
     "action": "Akce",
     "noPendingOfficers": "Momentálně zde není nikdo, kdo by žádal ověření.",
-    "allUnits": "Všechny hlídky",
+    "allUnits": "Všechny složky",
     "departmentWhitelisting": "Je potřeba ověření ({length})",
     "importViaFile": "Importovat skrze soubor",
     "managePermissions": "Správá práv",
@@ -63,6 +64,28 @@
     "editUser": "Upravit uživatele",
     "editing": "Momentálně upravuješ uživatele <span>{user}</span>",
     "editUnit": "Upravit hlídku",
+    "pending": "Čekající",
+    "banned": "Zabanován",
+    "officers": "Policisté",
+    "emsFdDeputies": "Příslušníci HZS/ZZS",
+    "citizens": "Civilisté",
+    "arrested": "Zadržení",
+    "dead": "Mrtvý",
+    "images": "Obrázek",
+    "created": "Vytvořené",
+    "registered": "Registrovaný",
+    "active": "Aktivní",
+    "vehicles": "Vozidla",
+    "leo": "PČR",
+    "emsFd": "HZS/ZZS",
+    "onDuty": "Ve službě",
+    "suspended": "Pozastaveno",
+    "manageCourthouseDescription": "Zde můžeš spravovat žádosti o výmaz, změny jmen a zatykače.",
+    "manageCustomFieldsDescription": "Zde můžeš spravovat vlastní pole.",
+    "manageCustomRolesDescription": "Zde můžeš spravovat vlastní role.",
+    "importCitizensDescription": "Zde můžeš importovat postavy, které nejsou připojeny k žádnému uživateli.",
+    "importVehiclesDescription": "Zde můžeš importovat vozidla, které nejsou připojeny k žádnému uživateli.",
+    "importWeaponsDescription": "Zde můžeš importovat zbraně, které nejsou připojeny k žádnému uživateli.",
     "alert_deleteCustomRole": "Jsi si jistý, že chceš smazat <span>{role}</span>? Toto nelze vrátit zpět!",
     "alert_deleteUnit": "Jsi si jistý, že chceš smazat <span>{unit}</span>? Toto nelze vrátit zpět!",
     "alert_deleteCustomField": "Jsi si jistý, že chceš smazat toto pole? Toto nelze vrátit zpět! Všechny hodnoty mohou být smazány také!",
