--- a/apps/client/locales/en/leo.json
+++ b/apps/client/locales/en/leo.json
@@ -244,6 +244,8 @@
     "alert_deleteNote": "Are you sure you want to delete this note? This action cannot be undone.",
     "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
+    "steamId": "Steam ID",
+    "discordId": "Discord ID",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
