:tada: feat: declare citizens missing

--- a/apps/client/locales/en/leo.json
+++ b/apps/client/locales/en/leo.json
@@ -246,6 +246,9 @@
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
     "steamId": "Steam ID",
     "discordId": "Discord ID",
+    "citizenMissing": "WARNING: This citizen went missing on {date}",
+    "declareFound": "Declare Found",
+    "declareMissing": "Declare Missing",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
