--- a/apps/client/locales/pt-BR/webhooks.json
+++ b/apps/client/locales/pt-BR/webhooks.json
@@ -1,50 +1,50 @@
 {
   "Tow": {
-    "vehicleImpounded": "Vehicle Impounded",
-    "registrationStatus": "Registration Status",
-    "model": "Model",
-    "owner": "Owner"
+    "vehicleImpounded": "Veículo Apreendido",
+    "registrationStatus": "Status do Registro",
+    "model": "Modelo",
+    "owner": "Proprietário"
   },
   "Bolos": {
-    "boloCreated": "BOLO Created",
-    "viewMoreInfo": "View more information on the CAD.",
-    "type": "Type",
-    "name": "Name",
-    "plate": "Plate",
-    "model": "Model",
-    "color": "Color"
+    "boloCreated": "BOLO Criado",
+    "viewMoreInfo": "Veja mais informações sobre o CAD.",
+    "type": "Tipo",
+    "name": "Nome",
+    "plate": "Placa",
+    "model": "Modelo",
+    "color": "Cor"
   },
   "Statuses": {
-    "statusChange": "Status Change",
+    "statusChange": "Mudança de Status",
     "status": "Status",
-    "statusChangeDescription": "Unit {unit} has changed their status to {status}."
+    "statusChangeDescription": "A unidade {unit} mudou seu status para {status}."
   },
   "PanicButton": {
-    "panicButton": "Panic Button",
-    "panicButtonDescription": "Unit {unit} has pressed the panic button."
+    "panicButton": "Botão do Pânico",
+    "panicButtonDescription": "A unidade {unit} pressionou o botão do pânico."
   },
   "Calls": {
-    "callCreated": "911 Call Created",
-    "viewMoreInfo": "View more information on the CAD.",
-    "location": "Location",
-    "caller": "Caller",
-    "unknown": "Unknown",
-    "couldNotRenderDescription": "Could not render description."
+    "callCreated": "Chamada 911 Criada",
+    "viewMoreInfo": "Veja mais informações sobre o CAD.",
+    "location": "Localização",
+    "caller": "Chamador",
+    "unknown": "Desconhecido",
+    "couldNotRenderDescription": "Não foi possível renderizar a descrição."
   },
   "Records": {
-    "citizen": "Citizen",
+    "citizen": "Cidadão",
     "status": "Status",
     "postal": "postal",
-    "recordType": "Record Type",
-    "ARREST_REPORT": "Arrest Report",
-    "WRITTEN_WARNING": "Written Warning",
-    "TICKET": "Ticket",
-    "totalBail": "Total Bail",
-    "totalFineAmount": "Total Fine Amount",
-    "totalJailTime": "Total Jail Time",
-    "newWarrantCreated": "New Warrant Created",
-    "newRecordCreated": "New Record Created",
-    "ACTIVE": "Active",
-    "INACTIVE": "Inactive"
+    "recordType": "Tipo do Registro",
+    "ARREST_REPORT": "Relatório de Prisão",
+    "WRITTEN_WARNING": "Aviso por Escrito",
+    "TICKET": "Multa",
+    "totalBail": "Fiança Total",
+    "totalFineAmount": "Valor Total da Multa",
+    "totalJailTime": "Tempo Total de Prisão",
+    "newWarrantCreated": "Novo Mandado Criado",
+    "newRecordCreated": "Novo Registro Criado",
+    "ACTIVE": "Ativo",
+    "INACTIVE": "Inativo"
   }
 }
