--- a/apps/client/locales/en/leo.json
+++ b/apps/client/locales/en/leo.json
@@ -249,6 +249,10 @@
     "citizenMissing": "WARNING: This citizen went missing on {date}",
     "declareFound": "Declare Found",
     "declareMissing": "Declare Missing",
+    "manageTones": "Manage Tones",
+    "noExistingTones": "There are no existing tones.",
+    "toneRevoked": "Tone Revoked",
+    "toneRevokedText": "Tone has successfully been revoked.",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
