--- a/apps/client/locales/pt-BR/auth.json
+++ b/apps/client/locales/pt-BR/auth.json
@@ -20,5 +20,11 @@
     "sixDigitCode": "Por favor, insira o código de 6 dígitos do seu aplicativo autenticador",
     "loginViaSteam": "Login via Steam",
     "or": "OU"
+    "accountPending": "Conta Pendente",
+    "accountPendingText": "Sua conta está pendente. Enquanto espera, você pode sincronizar com conexões de terceiros. Assim que sua conta for aprovada, você poderá fazer o login.",
+    "syncDiscord": "Sincronizar Discord",
+    "syncSteam": "Sincronizar Steam",
+    "discordSyncSuccess": "Conta do Discord sincronizada com sucesso.",
+    "steamSyncSuccess": "Conta da Steam sincronizada com sucesso."
   }
 }
