:hammer: chore: warn user image upload error (closes #1360)

--- a/apps/client/locales/en/common.json
+++ b/apps/client/locales/en/common.json
@@ -168,6 +168,7 @@
     "socialSecurityNumberTaken": "This social security number is already in use.",
     "citizenNotAllowedToEditLicenses": "You as a citizen are not allowed to edit your own licenses. Please contact an officer to manage your licenses.",
     "vehicleIsImpounded": "This vehicle is impounded, you cannot edit or delete until it's released from the impound lot.",
-    "featureNotEnabled": "This feature is not enabled. ({feature})"
+    "featureNotEnabled": "This feature is not enabled. ({feature})",
+    "errorUploadingImage": "Unable to upload your image at this moment. Please try again later. If this keeps reoccurring, contact the CAD-owner."
   }
 }
