--- a/apps/client/locales/en/common.json
+++ b/apps/client/locales/en/common.json
@@ -61,7 +61,10 @@
     "searching": "Searching...",
     "information": "Information",
     "showingXResults": "Showing <span>{amount}</span> result(s)",
-    "revoke": "Revoke"
+    "revoke": "Revoke",
+    "ok": "OK",
+    "color": "Text Color",
+    "backgroundColor": "Background Color"
   },
   "Nav": {
     "citizen": "Citizen",
