:tada: feat: add background coloring features to editor

--- a/apps/client/locales/en/common.json
+++ b/apps/client/locales/en/common.json
@@ -63,8 +63,8 @@
     "showingXResults": "Showing <span>{amount}</span> result(s)",
     "revoke": "Revoke",
     "ok": "OK",
-    "color": "Text Color",
-    "backgroundColor": "Background Color"
+    "text-color": "Text Color",
+    "background-color": "Background Color"
   },
   "Nav": {
     "citizen": "Citizen",
