🎉 feat: add coloring features to editor (#1369)
* :tada: feat: add coloring features to editor

* :tada: feat: add background coloring features to editor

* Format code with prettier

* chore: remove duplicate code

* chore: fix build

Co-authored-by: deepsource-autofix[bot] <62050782+deepsource-autofix[bot]@users.noreply.github.com>

--- a/apps/client/locales/en/common.json
+++ b/apps/client/locales/en/common.json
@@ -61,7 +61,10 @@
     "searching": "Searching...",
     "information": "Information",
     "showingXResults": "Showing <span>{amount}</span> result(s)",
-    "revoke": "Revoke"
+    "revoke": "Revoke",
+    "ok": "OK",
+    "text-color": "Text Color",
+    "background-color": "Background Color"
   },
   "Nav": {
     "citizen": "Citizen",
