--- a/apps/client/locales/de-DE/admin.json
+++ b/apps/client/locales/de-DE/admin.json
@@ -1,38 +1,39 @@
 {
   "Management": {
-    "management": "Verwaltung",
-    "adminDashboard": "Admins-Dashboard",
+    "management": "Management",
+    "adminDashboard": "Admin Dashboard",
     "MANAGE_CITIZENS": "Bürger verwalten",
     "MANAGE_BUSINESSES": "Unternehmen verwalten",
     "MANAGE_USERS": "Benutzer verwalten",
     "MANAGE_UNITS": "Einheiten verwalten",
-    "MANAGE_EXPUNGEMENT_REQUESTS": "Löschanträge verwalten",
-    "MANAGE_NAME_CHANGE_REQUESTS": "Namensänderung Anträge verwalten",
+    "MANAGE_EXPUNGEMENT_REQUESTS": "Löschungsanträge verwalten",
+    "MANAGE_NAME_CHANGE_REQUESTS": "Namensänderungsanträge verwalten",
     "MANAGE_CAD_SETTINGS": "CAD-Einstellungen",
     "MANAGE_CUSTOM_FIELDS": "Benutzerdefinierte Felder verwalten",
     "MANAGE_CUSTOM_ROLES": "Benutzerdefinierte Rollen verwalten",
-    "MANAGE_COURTHOUSE": "Gerichtsgebäude verwalten",
+    "MANAGE_COURTHOUSE": "Gericht verwalten",
+    "MANAGE_PENDING_WARRANTS": "Ausstehende Haftbefehle verwalten",
     "import": "Importieren",
     "IMPORT_CITIZENS": "Bürger importieren",
     "IMPORT_VEHICLES": "Fahrzeuge importieren",
     "IMPORT_WEAPONS": "Waffen importieren",
     "allUsers": "Alle Benutzer",
-    "pendingUsers": "Anhängige Benutzer",
-    "viewInfo": "Infos anzeigen",
-    "noCitizens": "Es gibt noch keine Bürger für dieses CAD.",
-    "noBusinesses": "Es gibt noch keine Unternehmen für dieses CAD.",
-    "noUnits": "Es gibt noch keine Einheiten.",
+    "pendingUsers": "Ausstehende Benutzer",
+    "viewInfo": "Informationen anzeigen",
+    "noCitizens": "Für dieses CAD gibt es noch keine Bürger.",
+    "noBusinesses": "Für dieses CAD gibt es noch keine Unternehmen.",
+    "noUnits": "Noch sind keine Einheiten vorhanden",
     "user": "Benutzer",
-    "owner": "Eigentümer",
+    "owner": "Inhaber",
     "GENERAL_SETTINGS": "Allgemeine Einstellungen",
-    "FEATURES": "Besonderheiten",
-    "MISC_SETTINGS": "Sonstige Einstelllugen",
+    "FEATURES": "Features",
+    "MISC_SETTINGS": "Sonstige Einstellungen",
     "deleteBusiness": "Unternehmen löschen",
     "giveTempPassword": "Temporäres Passwort vergeben",
-    "continue": "Ja, weiter.",
-    "reGenerateToken": "Token neu erzeugen",
-    "inBolo": "In BOLO",
-    "pendingBusinesses": "Anhängige Unternehmen",
+    "continue": "Ja, fortfahren.",
+    "reGenerateToken": "Token neu generieren",
+    "inBolo": "In der Fahndung",
+    "pendingBusinesses": "Ausstehende Unternehmen",
     "status": "Status",
     "allBusinesses": "Alle Unternehmen",
     "whitelisted": "Whitelisted",
@@ -41,18 +42,18 @@
     "noPendingOfficers": "Es gibt keine Beamten, die auf den Zugang zu einer Abteilung warten.",
     "allUnits": "Alle Einheiten",
     "departmentWhitelisting": "Abteilung Whitelisting ({length})",
-    "importViaFile": "Importieren über Datei",
+    "importViaFile": "Über Detei Importieren",
     "managePermissions": "Berechtigungen verwalten",
     "detailedPermissions": "Detaillierte Berechtigungen",
     "useOldPermissions": "Alte Berechtigungen verwenden",
     "useNewPermissions": "Neue Berechtigungen verwenden",
-    "setSelectedOffDuty": "Ausgewählte Einheiten auf dienstfrei setzen",
+    "setSelectedOffDuty": "Ausgewählte Einheiten außer Dienst stellen",
     "createCustomField": "Benutzerdefiniertes Feld erstellen",
     "editCustomField": "Benutzerdefiniertes Feld bearbeiten",
-    "noCustomFields": "Es sind noch keine benutzerdefinierten Felder vorhanden",
+    "noCustomFields": "Es gibt noch keine benutzerdefinierten Felder",
     "deleteCustomField": "Benutzerdefiniertes Feld löschen",
     "deleteUnit": "Einheit löschen",
-    "callsignManagement": "Rufzeichen-Verwaltung",
+    "callsignManagement": "Verwaltung der Rufzeichen",
     "customRoles": "Benutzerdefinierte Rollen",
     "createCustomRole": "Benutzerdefinierte Rolle erstellen",
     "noCustomRoles": "Es gibt noch keine benutzerdefinierten Rollen.",
@@ -61,12 +62,35 @@
     "manageRoles": "Rollen verwalten",
     "roles": "Rollen",
     "editUser": "Benutzer bearbeiten",
-    "editing": "Sie bearbeiten gerade <span>{user}</span>",
+    "editing": "Du bearbeitest gerade <span>{user}</span>",
     "editUnit": "Einheit bearbeiten",
-    "alert_deleteCustomRole": "Sind Sie sicher, dass Sie <span>{role}</span> löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden.",
-    "alert_deleteUnit": "Sind Sie sicher, dass Sie <span>{unit}</span> löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden.",
-    "alert_deleteCustomField": "Sind Sie sicher, dass Sie dieses benutzerdefinierte Feld löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden. Alle Werte, die mit diesem Feld erstellt wurden, werden ebenfalls gelöscht.",
-    "info_pendingBusinesses": "Es handelt sich um erstellte Unternehmen, die auf eine Genehmigung zur Nutzung warten. Akzeptieren Sie sie oder lehnen Sie sie ab.",
-    "alert_deleteBusiness": "Sind Sie sicher, dass Sie diesen <span>{name}</span> löschen wollen? Alle Daten gehen dabei verloren. Diese Aktion kann nicht rückgängig gemacht werden."
+    "users": "Benutzer",
+    "pending": "Ausstehend",
+    "banned": "Banned",
+    "officers": "Officers",
+    "emsFdDeputies": "EMS/FD Stellvertreter",
+    "citizens": "Bürger",
+    "arrested": "Verhaftet",
+    "dead": "Tot",
+    "images": "Bilder",
+    "created": "Erstellt",
+    "registered": "Registriert",
+    "active": "Aktiv",
+    "vehicles": "Fahrzeuge",
+    "leo": "LEO",
+    "emsFd": "EMS/FD",
+    "onDuty": "Im Dienst",
+    "suspended": "Suspendiert",
+    "manageCourthouseDescription": "Hier kannst Du Löschungsanträge, Namensänderungsanträge und ausstehende Haftbefehle verwalten.",
+    "manageCustomFieldsDescription": "Hier kannst Du benutzerdefinierte Felder verwalten. Dies sind Felder, die von jedem Beamten für Bürger bei der Namenssuche hinzugefügt werden können.",
+    "manageCustomRolesDescription": "Hier kannst Du benutzerdefinierte Rollen verwalten. Diese Rollen können den Benutzern zugewiesen werden, anstatt die Berechtigungen einzeln zu vergeben.",
+    "importCitizensDescription": "Hier kannst Du Massenimporte von Bürgern durchführen, die nicht mit einem registrierten Benutzer verbunden sind.",
+    "importVehiclesDescription": "Hier kannst Du Fahrzeuge, die auf einen Bürger zugelassen sind, massenhaft importieren. In der Tabelle unten kannst Du alle zugelassenen Fahrzeuge sehen.",
+    "importWeaponsDescription": "Hier kannst Du Waffen, die auf einen Bürger registriert sind, massenhaft importieren. In der Tabelle unten kannst Du alle registrierten Waffen sehen.",
+    "alert_deleteCustomRole": "Bist Du sicher, dass Du die Rolle <span>{role}</span>? löschen möchtest? Diese Aktion kann nicht rückgängig gemacht werden!",
+    "alert_deleteUnit": "Bist du sicher, dass Du die Einheite <span>{unit}</span> löschen möchtest? Diese Aktion kann nicht rückgängig gemacht werden",
+    "alert_deleteCustomField": "Bist Du sicher, dass Sie dieses benutzerdefinierte Feld löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden. Alle Werte, die mit diesem Feld erstellt wurden, werden ebenfalls gelöscht.",
+    "info_pendingBusinesses": "Es handelt sich um erstellte Unternehmen, die auf eine Genehmigung zur Nutzung warten. Akzeptiere oder lehne sie ab.",
+    "alert_deleteBusiness": "Bist Du sicher dass Du <span>{name}</span> löschen möchtest? Alle Daten gehen dabei verloren.. Diese Aktion kann nicht rückgängig gemacht werde"
   }
 }
