--- a/apps/client/locales/de-DE/admin.json
+++ b/apps/client/locales/de-DE/admin.json
@@ -68,7 +68,7 @@
     "pending": "Ausstehend",
     "banned": "Banned",
     "officers": "Officers",
-    "emsFdDeputies": "EMS/FD Stellvertreter",
+    "emsFdDeputies": "EMS/FD Abteilungsleiter",
     "citizens": "Bürger",
     "arrested": "Verhaftet",
     "dead": "Tot",
